--- a/static/css/home.css
+++ b/static/css/home.css
@@ -1,6 +1,6 @@
 body {
   font-family: "Arial", sans-serif;
-  background-color: #e9ecef;
+  background-color: #f4f4f4;
   margin: 0;
   padding: 0;
   height: 100vh;
@@ -9,7 +9,33 @@ body {
   justify-content: center;
 }
 
+.home-container {
+  background: #fff;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0px 0px 10px 0px #00000033;
+  text-align: center;
+  width: 100%;
+  max-width: 500px;
+}
+
+.home-header img {
+  width: 120px;
+}
+
 h1 {
-  color: #495057;
+  color: #333;
   font-size: 2.5em;
+  margin-top: 20px;
+}
+
+.home-content {
+  margin-top: 20px;
+  font-size: 18px;
+}
+
+.home-footer {
+  margin-top: 30px;
+  font-size: 14px;
+  color: #666;
 }
