style: Alterando title das páginas

--- a/templates/login.html
+++ b/templates/login.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
   <head>
-    <title>Login</title>
+    <title>Nutraining | Login</title>
     <link
       rel="stylesheet"
       href="{{ url_for('static', filename='css/login.css') }}"
