--- a/templates/home.html
+++ b/templates/home.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
   <head>
-    <title>Home</title>
+    <title>Nutraining | Home</title>
     <link
       rel="stylesheet"
       href="{{ url_for('static', filename='css/home.css') }}"
