--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
   <head>
-    <title>Bem-Vindo</title>
+    <title>Nutraining</title>
     <link
       rel="stylesheet"
       href="{{ url_for('static', filename='css/estilo.css') }}"
