--- a/templates/login.html
+++ b/templates/login.html
@@ -3,6 +3,11 @@
   <head>
     <title>Nutraining | Login</title>
     <link
+      rel="icon"
+      href="{{ url_for('static', filename='images/favicon-16x16.png') }}"
+      type="image/x-icon"
+    />
+    <link
       rel="stylesheet"
       href="{{ url_for('static', filename='css/login.css') }}"
     />
